--- a/user_scope/config/packages/security.yaml
+++ b/user_scope/config/packages/security.yaml
@@ -22,8 +22,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/users, roles: ROLE_USER_LIST }
+        - { path: ^/users/.*/edit, roles: ROLE_USER_EDIT }
+        - { path: ^/algorithm, roles: ROLE_ALGORITHM_VIEW }
 
 when@test:
     security:
