--- a/user_scope/composer.json
+++ b/user_scope/composer.json
@@ -14,7 +14,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
-        "phpstan/phpdoc-parser": "^2.1",
+        "phpstan/phpdoc-parser": "^1.28.0",
+        "sensio/framework-extra-bundle": "*",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
