--- a/user_scope/config/packages/security.yaml
+++ b/user_scope/config/packages/security.yaml
@@ -2,6 +2,8 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
@@ -22,7 +24,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/users, roles: ROLE_USER_LIST }
+        - { path: ^/users/.*/edit, roles: ROLE_USER_EDIT }
+        - { path: ^/algorithm, roles: ROLE_ALGORITHM_VIEW }
 
 when@test:
     security:
