--- a/user_scope/config/packages/security.yaml
+++ b/user_scope/config/packages/security.yaml
@@ -3,22 +3,28 @@ security:
     password_hashers:
         App\Entity\User:
             algorithm: bcrypt
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            provider: app_user_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                default_target_path: user_list
+            logout:
+                path: app_logout
+                target: app_login
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
@@ -26,7 +32,7 @@ security:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/users, roles: ROLE_USER_LIST }
         - { path: ^/users/.*/edit, roles: ROLE_USER_EDIT }
-        - { path: ^/algorithm, roles: ROLE_ALGORITHM_VIEW }
+        - { path: ^/combinations, roles: ROLE_ALGORITHM_VIEW }
 
 when@test:
     security:
